Fixed scrollbar issue on task cards, added on brand favicon.

--- a/you-kan.UI/ClientApp/src/app/tasks/components/task-card/task-card.component.css
+++ b/you-kan.UI/ClientApp/src/app/tasks/components/task-card/task-card.component.css
@@ -1,7 +1,7 @@
 .card-style {
     display: flex;
     flex: 1;
-    margin: 10px;
+    margin-bottom: 0px;
     width: 200px;
 }
 
